# plasmasafe

./: LICENSE  README.md  aur.sh  checksum-helper.sh  make-fake-home.sh  plasmasafe.cabal  test-plasmasafe.sh
app/: Main.hs
app/PlasmaSafe/: Archive.hs  CLI.hs  Copy.hs  Doctor.hs  Manifest.hs  Paths.hs  Profile.hs  Restore.hs  Snapshot.hs  SnapshotStore.hs  Types.hs  Verify.hs
